--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,14 @@ button:hover {
   border-color: #0062cc;
 }
 
+/* .success {
+    color: #28a745;
+}
+
+.fail {
+    color: #dc3545;
+} */
+
 .danger-button {
   background-color: #dc3545;
   color: white;
@@ -185,11 +193,55 @@ button:hover {
   border-bottom-color: #007bff;
 }
 
+
 #graphDiv {
-  padding: 20px;
-  min-height: 150px;
-  border-bottom: 1px solid #dee2e6;
+    flex: 3; 
+    min-width: 300px;
+    min-height: 400px;
+    padding: 20px;
+    overflow-x: auto;
 }
+
+.resultBox {
+    flex: 1;
+    min-width: 200px;
+    min-height: 100px;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+
+.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 2px solid #155724;
+}
+
+.failed {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 2px solid #721c24;
+}
+
+
+#verfResult {
+    flex: 1;
+    min-width: 200px;
+    min-height: 100px;
+    padding: 20px;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
 
 #output {
   flex: 1;
@@ -204,17 +256,36 @@ button:hover {
   border-radius: 0 0 8px 8px;
 }
 
-@media (max-width: 768px) {
-  .header {
-    flex-direction: column;
+.allFlex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: flex-start;
-  }
+    gap: 20px;
+    width: 100%;
+    margin: auto;
+}
+
+
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .allFlex {
+        flex-direction: column;
+        align-items: center;
+    }
+    #graphDiv, #verfResult {
+        width: 100%;
+    }
   
-  .logo {
-    margin-bottom: 10px;
-  }
-  
-  .button-grid {
-    grid-template-columns: 1fr;
-  }
+    .logo {
+        margin-bottom: 10px;
+    }
+
+    .button-grid {
+        grid-template-columns: 1fr;
+    }
 }
